--- a/Portfolio/package.json
+++ b/Portfolio/package.json
@@ -10,9 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "lottie-react": "^2.4.0",
+    "lottie-web": "^5.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-lottie": "^1.2.4",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0",
     "react-whatsapp": "^0.3.0",
